ErrorNest/server/logs/2023-11-30.exception.log
2023-11-30 18:57:12 [Error-Nest] error: uncaughtException: Unexpected identifier
C:\Users\alkjf\WebstormProjects\error-nest-v1\ErrorNest\server\db\schema\document.js:23
    updateAt: {
    ^^^^^^^^

SyntaxError: Unexpected identifier
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (C:\Users\alkjf\WebstormProjects\error-nest-v1\ErrorNest\server\controller\documentController.js:1:18)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
2023-11-30 18:58:39 [Error-Nest] error: uncaughtException: Identifier 'documentSelect' has already been declared
C:\Users\alkjf\WebstormProjects\error-nest-v1\ErrorNest\server\controller\documentController.js:18
const documentSelect = async (req, res, next) => {
      ^

SyntaxError: Identifier 'documentSelect' has already been declared
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (C:\Users\alkjf\WebstormProjects\error-nest-v1\ErrorNest\server\routes\document.js:2:28)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
2023-11-30 19:00:14 [Error-Nest] error: uncaughtException: Unexpected token ','
C:\Users\alkjf\WebstormProjects\error-nest-v1\ErrorNest\server\controller\documentController.js:21
            title: ,
                   ^

SyntaxError: Unexpected token ','
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (C:\Users\alkjf\WebstormProjects\error-nest-v1\ErrorNest\server\routes\document.js:2:28)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
